tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__FluidFromSulfurG-AAAAAAAAAAAAAAAAAAAJEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2322,
  "prerequisites": [
    2305
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combine the Rhodium Sulfate you got with Water, and you'll get Rhodium Sulfate Solution, as well as some more Leech Residue, and Molten Potassium.\n\nYou get just over 13 ingots' worth of Potassium back, you'll want to use the fluid solidifier and then macerate it to use it again.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lFluid From Sulfur Gas",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "CHAIN"
  },
  "required_prerequisites": [
    2305
  ],
  "rewards": [],
  "tasks": []
}
