tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__FreezingNitrates-AAAAAAAAAAAAAAAAAAAMCA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3080,
  "prerequisites": [
    3065
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Yep, you're seeing right: A line with a vacuum freezer!\n\nTo separate some of the more... tricky elements, extreme cold is needed.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lFreezing Nitrates",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3065
  ],
  "rewards": [],
  "tasks": []
}
