tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__GlowingMatter-AAAAAAAAAAAAAAAAAAAMBA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3076,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Another way to get Sunnarium! Just throw stacks of Glowing Coral and a tiny bit of UU-Matter in an autoclave and hope for the best.\n\nYou can either use an IC2 crop farm, or have any type of Glowstone farm and combine it with a GT++ Algae Farm.\n\nA farm for Glowing Coral or Glowstone should also help you mass produce other resources like Gold, Redstone, Mercury, etc.\n\n[note]You may want to check out the Industrial Autoclave for speeding things up, but you will need to be in LuV to build one.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lGlowing Matter",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
