tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__HSSS-AAAAAAAAAAAAAAAAAAAGgQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1665,
  "prerequisites": [
    2321,
    1491,
    2317
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have HSS-G, it's time to make HSS-S. This new alloy is an important part of a lot of LuV recipes.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lHSS-S",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    2321,
    1491,
    2317
  ],
  "rewards": [],
  "tasks": []
}
