tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier5IV-AAAAAAAAAAAAAAAAAAAABw==__HafniumLine-AAAAAAAAAAAAAAAAAAAL5w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3047,
  "prerequisites": [
    3045
  ],
  "properties": {
    "auto_claim": false,
    "desc": "There is a key difference with hafnium here, however. Follow this mini line to hear more.\n\nFirst off you'll need to react your hafnia with some hydrochloric acid.\n\nAnd, like with zirconium, you'll need the solution rather than the dust.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§b§lHafnium Line",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3045
  ],
  "rewards": [],
  "tasks": []
}
